--- a/index.html
+++ b/index.html
@@ -15,18 +15,6 @@
         <h1 class="main-title">Etch a Sketch</h1>
 
         <div class="tools-item">
-          <label for="color-picker">Color</label>
-          <div class="color-wrapper">
-            <input
-              type="color"
-              class="color-input"
-              name="color"
-              id="color-picker"
-            />
-          </div>
-        </div>
-
-        <div class="tools-item">
           <label for="color-picker-bg">Background</label>
           <div class="color-wrapper">
             <input
@@ -39,12 +27,30 @@
         </div>
 
         <div class="tools-item">
-          <button class="button" id="reset-button" type="button">Reset</button>
+          <button class="button round" id="random-button" type="button">
+            🪄
+          </button>
+        </div>
+
+        <div class="tools-item">
+          <button class="button reset" id="reset-button" type="button">
+            Reset
+          </button>
         </div>
       </div>
 
-      <!-- Grid Container Start -->
-      <div id="board" class="board-container"></div>
+      <!-- Screen Container Start -->
+      <div class="screen">
+        <div id="board" class="board-container"></div>
+        <div id="overlay" class="overlay">
+          <div class="safe-area">
+            <p>Welcome!</p>
+            <p>"🧹" => Eraser</p>
+            <p>"🪄" => Magic Color</p>
+          </div>
+        </div>
+      </div>
+      <!-- Screen End -->
 
       <div class="tools-container">
         <div class="tools-item">
@@ -54,13 +60,23 @@
           </label>
           <input type="range" name="size" id="size-slider" />
         </div>
+
         <div class="tools-item">
-          <button class="button round" id="random-button" type="button">
-            Magic
-          </button>
+          <label for="color-picker">Color</label>
+          <div class="color-wrapper">
+            <input
+              type="color"
+              class="color-input"
+              name="color"
+              id="color-picker"
+            />
+          </div>
         </div>
+
         <div class="tools-item">
-          <button class="button round" id="erase-button" type="button">Erase</button>
+          <button class="button round" id="erase-button" type="button">
+            🧹
+          </button>
         </div>
       </div>
       <!-- Grid Container End -->
