add overlay hint at start

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         </div>
 
         <div class="tools-item">
-          <button class="button reset" id="reset-button" type="button">
-            Reset
+          <button class="button round reset" id="reset-button" type="button">
+            🔁
           </button>
         </div>
       </div>
 
       <!-- Screen Container Start -->
-      <div class="screen">
+      <div id="screen" class="screen">
         <div id="board" class="board-container"></div>
       </div>
       <!-- Screen End -->
@@ -69,6 +69,11 @@
         <div class="tools-item">
           <button class="button round" id="erase-button" type="button">
             🧹
+          </button>
+        </div>
+        <div class="tools-item">
+          <button class="button round" id="alpha-button" type="button">
+            🖌️
           </button>
         </div>
       </div>
