--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
     />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Etch A SKETCH!!</title>
   </head>
   <body>
     <main id="main">
